# rollup-raptor

./: .gitignore  Cargo.toml  README.md  flake.nix  keys.db  rust-toolchain.toml
circuits/rollup/: Nargo.toml  Prover.toml  Verifier.toml
circuits/rollup/proofs/: rollup.proof
circuits/rollup/src/: hash.nr  helpers.nr  main.nr  merkle.nr  secp256k1.nr  state.nr
circuits/test/: Nargo.toml
circuits/test/src/: main.nr
client/: Cargo.toml
client/circuits/rollup/: Nargo.toml
client/circuits/rollup/proofs/: rollup.proof
client/circuits/rollup/src/: main.nr
client/src/: main.rs
contract/: Cargo.toml
contract/src/: main.rs
merkle-tree/: Cargo.toml  README.md
merkle-tree/src/: config.rs  deprecated.rs  error.rs  helpers.rs  lib.rs  optimized.rs  tornado.rs
rollup/: Cargo.toml
rollup-noir-contract/: Cargo.toml
rollup-noir-contract/src/: error.rs  main.rs
rollup/circuits/rollup/proofs/: rollup.proof
rollup/src/: helpers.rs  main.rs
src/: main.rs  transfer.rs
src/transfer/: backend.rs
