[package]
name = "noir-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = "0.13.2"
rand_core = "0.6.4"
sha2 = "0.10.8"
serde_json = "1.0.108"
ecdsa-circuit-input-lib = { git = "https://github.com/jonas089/ecdsa-circuit-input-lib.git", branch = "master" }
merkle-tree = {git = "https://github.com/jonas089/thyla-trees.git", branch = "master"}