[package]
name = "rollup-noir-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = { git = "https://github.com/jonas089/casper-node/", branch="rollup-raptor-noir", default-features = false, features = ["test-support"]}
casper-types = { git = "https://github.com/jonas089/casper-node/", branch="rollup-raptor-noir", default-features = false}
serde-json-wasm = "1.0.0"
serde = "1.0.194"